sữa một số lỗi vặt của phần booking